--- a/app/common/ui/block-display/block-display.css
+++ b/app/common/ui/block-display/block-display.css
@@ -7,11 +7,11 @@
     width: 100px;
     height: 30px;
     background-color: rgba(0, 0, 0, 0.1);
-    box-shadow: inset 0 0 1px white;
+    margin: 1px;
     font-weight: normal;
     font-size: 10px;
-    line-height: 45px;
-    color: rgba(255, 255, 255, 0.2);
+    line-height: 48px;
+    color: transparent;
     text-align: right;
     padding-right: 3px;
     overflow: hidden;
@@ -20,6 +20,7 @@
     background-color: rgba(0, 0, 0, 0.1);
     border: 3px dotted rgba(0, 0, 0, 0.4); }
   .block-display b:hover {
-    background-color: #d8d8d8 !important;
-    color: #666666;
-    box-shadow: inset 0 0 1px #323232; }
+    position: relative;
+    box-shadow: inset 0 -12px 0 rgba(255, 255, 255, 0.6), 0 0 0 2px white, 0 5px 30px 5px rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 0.8);
+    z-index: 1; }
