disable user selection of blocks

--- a/app/common/ui/block-display/block-display.sass
+++ b/app/common/ui/block-display/block-display.sass
@@ -4,6 +4,11 @@
   $blockHeight: 30px
   position: relative
   font-size: 0
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
 
 
   // One bitcoin block
@@ -14,6 +19,7 @@
     height: $blockHeight
     background-color: $shade10
     margin: 1px
+    user-select: none
     // tiny hash label
     font-weight: normal
     font-size: 10px
