--- a/app/common/ui/block-display/block-display.css
+++ b/app/common/ui/block-display/block-display.css
@@ -1,6 +1,11 @@
 .block-display {
   position: relative;
-  font-size: 0; }
+  font-size: 0;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
   .block-display b {
     display: inline-block;
     box-sizing: border-box;
@@ -8,6 +13,7 @@
     height: 30px;
     background-color: rgba(0, 0, 0, 0.1);
     margin: 1px;
+    user-select: none;
     font-weight: normal;
     font-size: 10px;
     line-height: 48px;
