--- a/app/common/ui/block-display/block-display.css
+++ b/app/common/ui/block-display/block-display.css
@@ -25,8 +25,9 @@
   .block-display b.pending {
     background-color: rgba(0, 0, 0, 0.1);
     border: 3px dotted rgba(0, 0, 0, 0.4); }
-  .block-display b:hover {
+  .block-display b:focus {
     position: relative;
     box-shadow: inset 0 -12px 0 rgba(255, 255, 255, 0.6), 0 0 0 2px white, 0 5px 30px 5px rgba(0, 0, 0, 0.6);
     color: rgba(0, 0, 0, 0.8);
-    z-index: 1; }
+    z-index: 1;
+    outline: none; }
