Split blocks visually by day in local time

--- a/app/common/styles/typography.sass
+++ b/app/common/styles/typography.sass
@@ -20,10 +20,11 @@ h1
   line-height: 2
   padding-right: 15px
   text-align: right
-  background: $black80
-  margin-bottom: 1px
+  background: $black05
+  border-bottom: $black10
+  margin-bottom: 2px
   a
-    color: $white40
+    color: $black40
     text-decoration: none
   a:hover
     text-decoration: underline
