--- a/app/common/styles/typography.css
+++ b/app/common/styles/typography.css
@@ -17,10 +17,11 @@ h1 {
   line-height: 2;
   padding-right: 15px;
   text-align: right;
-  background: #323232;
-  margin-bottom: 1px; }
+  background: #f2f2f2;
+  border-bottom: #e5e5e5;
+  margin-bottom: 2px; }
   h1 a {
-    color: #666666;
+    color: #999999;
     text-decoration: none; }
   h1 a:hover {
     text-decoration: underline; }
