--- a/app/common/ui/block-display/block-display.css
+++ b/app/common/ui/block-display/block-display.css
@@ -6,6 +6,14 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none; }
+  .block-display h3 {
+    color: #999999;
+    font-size: 11px;
+    line-height: 20px;
+    font-weight: normal;
+    padding-left: 5px;
+    color: #999999;
+    margin: 1px 0; }
   .block-display b {
     display: inline-block;
     box-sizing: border-box;
