--- a/app/common/ui/calendar/calendar.css
+++ b/app/common/ui/calendar/calendar.css
@@ -1,6 +1,32 @@
-.calendar li {
-  display: block;
-  float: left;
-  box-shadow: inset 0 0 1px #cccccc;
-  width: 60px;
-  height: 60px; }
+.calendar {
+  position: relative;
+  background: white;
+  min-height: 9999px; }
+  .calendar .row, .calendar li {
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .calendar .row {
+    width: 100%; }
+  .calendar li {
+    display: block;
+    width: 14.28571%;
+    box-shadow: inset 0 0 1px #cccccc;
+    background-color: #f2f2f2;
+    height: 100%; }
+    .calendar li.day-1 {
+      left: 0; }
+    .calendar li.day-2 {
+      left: 14.28571%; }
+    .calendar li.day-3 {
+      left: 28.57143%; }
+    .calendar li.day-4 {
+      left: 42.85714%; }
+    .calendar li.day-5 {
+      left: 57.14286%; }
+    .calendar li.day-6 {
+      left: 71.42857%; }
+    .calendar li.day-7 {
+      left: 85.71429%; }
+  .calendar .row.offScreen li {
+    background-color: pink; }
