--- a/app/common/ui/calendar/calendar.sass
+++ b/app/common/ui/calendar/calendar.sass
@@ -2,11 +2,49 @@
 
 .calendar
   $size: 60px
+  position: relative
+  background: white
+  min-height: 9999px // make sure there's a scroll bar there
+
+  .row, li
+    position: absolute
+    top: 0
+    left: 0
+
+  // Row. A container for a week
+  .row
+    width: 100%
 
   // One day in the calendar
   li
     display: block
-    float: left
+    width: percentage(1/7)
     box-shadow: inset 0 0 1px $black20
-    width: $size
-    height: $size
+    background-color: $black05
+    height: 100% // of the row it's in
+    // These indices refer to a day of the week. Sunday is 1.
+    &.day-1
+      left: 0
+    &.day-2
+      left: percentage(1/7 * 1)
+    &.day-3
+      left: percentage(1/7 * 2)
+    &.day-4
+      left: percentage(1/7 * 3)
+    &.day-5
+      left: percentage(1/7 * 4)
+    &.day-6
+      left: percentage(1/7 * 5)
+    &.day-7
+      left: percentage(1/7 * 6)
+
+
+
+
+
+
+
+
+  // For debugging
+  .row.offScreen li
+    background-color: pink
