removing the top positions of rows that fall off screen makes them truly available for reuse. Setting the height of the container ahead of time makes the scroll bar consistent

--- a/app/common/ui/calendar/calendar.sass
+++ b/app/common/ui/calendar/calendar.sass
@@ -21,6 +21,7 @@
     display: block
     width: percentage(1/7)
     box-shadow: inset 0 0 2px $black20
+    background-color: $shade05
     height: 100% // of the row it's in
     // These indices refer to a day of the week. Sunday is 1.
     //&li:nth-child(odd)
