--- a/app/common/ui/calendar/calendar.css
+++ b/app/common/ui/calendar/calendar.css
@@ -13,6 +13,7 @@
     display: block;
     width: 14.28571%;
     box-shadow: inset 0 0 2px #cccccc;
+    background-color: rgba(0, 0, 0, 0.05);
     height: 100%; }
     .calendar li.day-1 {
       left: 0; }
