--- a/app/common/ui/calendar/calendar.css
+++ b/app/common/ui/calendar/calendar.css
@@ -1,7 +1,9 @@
 .calendar {
   position: relative;
   background: white;
-  min-height: 9999px; }
+  min-height: 9999px;
+  max-width: 1000px;
+  margin: 0 auto; }
   .calendar ol, .calendar li {
     position: absolute;
     top: 0;
@@ -15,19 +17,17 @@
     box-shadow: inset 0 0 2px #cccccc;
     background-color: rgba(0, 0, 0, 0.05);
     height: 100%; }
-    .calendar li.day-1 {
-      left: 0; }
-    .calendar li.day-2 {
-      left: 14.28571%; }
-    .calendar li.day-3 {
-      left: 28.57143%; }
-    .calendar li.day-4 {
-      left: 42.85714%; }
-    .calendar li.day-5 {
-      left: 57.14286%; }
-    .calendar li.day-6 {
-      left: 71.42857%; }
-    .calendar li.day-7 {
-      left: 85.71429%; }
-  .calendar .row.offScreen li {
-    background-color: pink; }
+  .calendar .day-0 {
+    left: 0%; }
+  .calendar .day-1 {
+    left: 14.28571%; }
+  .calendar .day-2 {
+    left: 28.57143%; }
+  .calendar .day-3 {
+    left: 42.85714%; }
+  .calendar .day-4 {
+    left: 57.14286%; }
+  .calendar .day-5 {
+    left: 71.42857%; }
+  .calendar .day-6 {
+    left: 85.71429%; }
