--- a/app/common/ui/calendar/calendar.sass
+++ b/app/common/ui/calendar/calendar.sass
@@ -5,6 +5,8 @@
   position: relative
   background: white
   min-height: 9999px // make sure there's a scroll bar there
+  max-width: 1000px // so the calendar doesn't get too stretchy
+  margin: 0 auto
 
   ol, li
     position: absolute
@@ -14,7 +16,7 @@
   // Row. A container for a week
   ol
     width: 100%
-    top: -9999px
+    top: -9999px // off screen by default, positioned by JS
 
   // One day in the calendar
   li
@@ -23,28 +25,11 @@
     box-shadow: inset 0 0 2px $black20
     background-color: $shade05
     height: 100% // of the row it's in
-    // These indices refer to a day of the week. Sunday is 1.
-    //&li:nth-child(odd)
-    &.day-1
-      left: 0
-    &.day-2
-      left: percentage(1/7 * 1)
-    &.day-3
-      left: percentage(1/7 * 2)
-    &.day-4
-      left: percentage(1/7 * 3)
-    &.day-5
-      left: percentage(1/7 * 4)
-    &.day-6
-      left: percentage(1/7 * 5)
-    &.day-7
-      left: percentage(1/7 * 6)
+
+  // Each day of the week has a little bit more of a left offset
+  // These indices refer to a day of the week. Sunday is 0.
+  @for $i from 0 through 6
+    .day-#{$i}
+      left: percentage(1/7 * $i)
 
 
-
-
-
-
-  // For debugging
-  .row.offScreen li
-    background-color: pink
