Support running tests with `npm test`

--- a/app/common/styles/_colors.sass
+++ b/app/common/styles/_colors.sass
@@ -41,7 +41,7 @@ $white80: mix(white, black, 80%)
 $white90: mix(white, black, 90%)
 
 // Pallete colors, for brand consistency and beauty
-$green:   #66c2a4
+$green:   rgb(80,200,0)
 $red:     #dd1c77
 $blue:    #43a2ca
 $orange:  #fe9929
