--- a/app/core/header.sass
+++ b/app/core/header.sass
@@ -22,8 +22,12 @@ header
     float: right
 
   a
+    display: inline-block
+    height: 100%
     color: $black40
     text-decoration: none
     margin-right: 10px
+    padding: 0 3px
   a:hover
     text-decoration: underline
+    background: $shade02
