--- a/app/common/ui/calendar/calendar.sass
+++ b/app/common/ui/calendar/calendar.sass
@@ -23,8 +23,15 @@
     display: block
     width: percentage(1/7)
     box-shadow: inset 0 0 2px $black20
-    background-color: $shade05
+    background-color: $black05
     height: 100% // of the row it's in
+    color: $black20
+    font-size: 12px
+    line-height: 3
+    text-align: center
+    cursor: pointer
+    &:hover
+      color: $shade60
 
   // Each day of the week has a little bit more of a left offset
   // These indices refer to a day of the week. Sunday is 0.
